--- a/trunk/BehaviourTree/BTLib/BTLib.csproj
+++ b/trunk/BehaviourTree/BTLib/BTLib.csproj
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BTAction.cs" />
-    <Compile Include="BTContext.cs" />
-    <Compile Include="BTGroupNode.cs" />
-    <Compile Include="BTPath.cs" />
-    <Compile Include="BTSelector.cs" />
-    <Compile Include="BTSequence.cs" />
-    <Compile Include="BTStatus.cs" />
-    <Compile Include="BTNode.cs" />
+    <Compile Include="Action.cs" />
+    <Compile Include="Context.cs" />
+    <Compile Include="CompositeNode.cs" />
+    <Compile Include="Path.cs" />
+    <Compile Include="Selector.cs" />
+    <Compile Include="Sequence.cs" />
+    <Compile Include="Status.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
