Added condition, bt builder, simple test. Fix some issues, fix debug output

--- a/trunk/BehaviourTree/BTLib/BTLib.csproj
+++ b/trunk/BehaviourTree/BTLib/BTLib.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Condition.cs" />
+    <Compile Include="BTBuilder.cs" />
     <Compile Include="SimpleAction.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="CompositeNode.cs" />
