--- a/trunk/BehaviourTree/BehaviourTree/BehaviourTree.csproj
+++ b/trunk/BehaviourTree/BehaviourTree/BehaviourTree.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BTLib\BTLib.csproj">
+      <Project>{0068E3A1-ABE1-4902-B1D7-FE5FD4F9D127}</Project>
+      <Name>BTLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
