--- a/trunk/BehaviourTree/BTLib/BTLib.csproj
+++ b/trunk/BehaviourTree/BTLib/BTLib.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionNode.cs" />
     <Compile Include="Condition.cs" />
     <Compile Include="BTBuilder.cs" />
     <Compile Include="SimpleAction.cs" />
