--- a/trunk/BehaviourTree/BTLib/BTLib.csproj
+++ b/trunk/BehaviourTree/BTLib/BTLib.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INodeContextCreator.cs" />
     <Compile Include="NodeContext.cs" />
     <Compile Include="ActionNode.cs" />
     <Compile Include="Condition.cs" />
